# packages/cactus-plugin-ledger-connector-polkadot/src/main/json/openapi.json
@@ -9,26 +9,6 @@
       "url": "https://www.apache.org/licenses/LICENSE-2.0.html"
     }
   },
-  "servers": [
-    {
-      "url": "https://www.cactus.stream/{basePath}",
-      "description": "Public test instance",
-      "variables": {
-        "basePath": {
-          "default": ""
-        }
-      }
-    },
-    {
-      "url": "http://localhost:4000/{basePath}",
-      "description": "Local test instance",
-      "variables": {
-        "basePath": {
-          "default": ""
-        }
-      }
-    }
-  ],
   "components": {
     "schemas": {
         "PrometheusExporterMetricsResponse": {
@@ -112,6 +92,133 @@
               }
             }
           }
+        },
+        "RawTransactionRequest": {
+          "type": "object",
+          "required": ["to", "value"],
+          "additionalProperties": false,
+          "properties": {
+            "to": {
+              "type": "string",
+              "nullable": false
+            },
+            "value": {
+              "type": "number",
+              "nullable": false
+            }
+          }
+        },
+        "RawTransactionResponseData": {
+          "type": "object",
+          "required": [
+            "rawTransaction"
+          ],
+          "additionalProperties": false,
+          "properties": {
+            "rawTransaction": {
+              "type": "string",
+              "nullable": false
+            }
+          }
+        },
+        "RawTransactionResponse": {
+          "type": "object",
+          "required": ["responseContainer"],
+          "additionalProperties": false,
+          "properties": {
+            "responseContainer": {
+              "type": "object",
+              "required": [
+                "response_data",
+                "succeeded",
+                "message",
+                "error"
+              ],
+              "additionalProperties": false,
+              "properties": {
+                "response_data": {
+                  "$ref": "#/components/schemas/RawTransactionResponseData",
+                  "nullable": false
+                },
+                "succeeded": {
+                  "type": "boolean",
+                  "nullable": false
+                },
+                "message": {
+                  "type": "string",
+                  "nullable": false
+                },
+                "error": {
+                  "type": "string",
+                  "nullable": true
+                }
+              }
+            }
+          }
+        },
+        "SignRawTransactionRequest": {
+          "type": "object",
+          "required": ["rawTransaction", "mnemonic"],
+          "additionalProperties": false,
+          "properties": {
+            "rawTransaction": {
+              "type": "string",
+              "nullable": false
+            },
+            "mnemonic": {
+              "type": "string",
+              "nullable": false
+            },
+            "signingOptions": {
+              "type": "object",
+              "nullable": false
+            }
+          }
+        },
+        "SignRawTransactionResponse": {
+          "type": "object",
+          "required": ["success", "signedTransaction"],
+          "additionalProperties": false,
+          "properties": {
+            "success": {
+              "type": "boolean",
+              "nullable": false
+            },
+            "signedTransaction": {
+              "type": "string",
+              "nullable": false
+            }
+          }
+        },
+        "RunTransactionRequest": {
+          "type": "object",
+          "required": [
+            "transferSubmittable"
+          ],
+          "additionalProperties": false,
+          "properties": {
+            "transferSubmittable": {
+              "type": "string",
+              "nullable": false
+            }
+          }
+        },
+        "RunTransactionResponse": {
+          "type": "object",
+          "required": [
+            "success"
+          ],
+          "additionalProperties": false,
+          "properties": {
+            "success": {
+              "type": "boolean",
+              "nullable": false
+            },
+            "hash": {
+              "type": "object",
+              "nullable": false
+            }
+          }
         }
       }
     },
@@ -142,15 +249,15 @@
       }
     },
     "/api/v1/plugins/@hyperledger/cactus-plugin-ledger-connector-polkadot/get-transaction-info": {
-      "get": {
+      "post": {
         "x-hyperledger-cactus": {
           "http": {
-            "verbLowerCase": "get",
+            "verbLowerCase": "post",
             "path": "/api/v1/plugins/@hyperledger/cactus-plugin-ledger-connector-polkadot/get-transaction-info"
           }
         },
         "operationId": "getTransactionInfo",
-        "summary": "Get the necessary Transaction Info",
+        "summary": "Get the necessary Transaction Info for a account",
         "parameters": [],
         "requestBody": {
           "content": {
@@ -165,9 +272,111 @@
           "200": {
             "description": "OK",
             "content": {
-              "/json/": {
+              "application/json": {
                 "schema": {
                   "$ref": "#/components/schemas/TransactionInfoResponse"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/api/v1/plugins/@hyperledger/cactus-plugin-ledger-connector-polkadot/get-raw-transaction": {
+      "post": {
+        "x-hyperledger-cactus": {
+          "http": {
+            "verbLowerCase": "post",
+            "path": "/api/v1/plugins/@hyperledger/cactus-plugin-ledger-connector-polkadot/get-raw-transaction"
+          }
+        },
+        "operationId": "getRawTransaction",
+        "summary": "Get raw unsigned transaction",
+        "parameters": [],
+        "requestBody": {
+          "content": {
+              "application/json": {
+                  "schema": {
+                      "$ref": "#/components/schemas/RawTransactionRequest"
+                  }
+              }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/RawTransactionResponse"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/api/v1/plugins/@hyperledger/cactus-plugin-ledger-connector-polkadot/sign-raw-transaction": {
+      "post": {
+        "x-hyperledger-cactus": {
+          "http": {
+            "verbLowerCase": "post",
+            "path": "/api/v1/plugins/@hyperledger/cactus-plugin-ledger-connector-polkadot/sign-raw-transaction"
+          }
+        },
+        "operationId": "signRawTransaction",
+        "summary": "sign the raw transaction",
+        "parameters": [],
+        "requestBody": {
+          "content": {
+              "application/json": {
+                  "schema": {
+                      "$ref": "#/components/schemas/SignRawTransactionRequest"
+                  }
+              }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/SignRawTransactionResponse"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/api/v1/plugins/@hyperledger/cactus-plugin-ledger-connector-polkadot/run-transaction": {
+      "post": {
+        "x-hyperledger-cactus": {
+          "http": {
+            "verbLowerCase": "post",
+            "path": "/api/v1/plugins/@hyperledger/cactus-plugin-ledger-connector-polkadot/run-transaction"
+          }
+        },
+        "operationId": "runTransaction",
+        "summary": "Executes a transaction on a Polkadot ledger",
+        "parameters": [],
+        "requestBody": {
+          "content": {
+              "application/json": {
+                  "schema": {
+                      "$ref": "#/components/schemas/RunTransactionRequest"
+                  }
+              }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/RunTransactionResponse"
                 }
               }
             }
